apps/production/owntracks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: owntracks
  labels:
    app.kubernetes.io/name: owntracks
    app.kubernetes.io/component: telemetry
