apps/production/owntracks/recorder-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: owntracks-basic-auth
  namespace: owntracks
spec:
  basicAuth:
    secret: owntracks-basic-auth
    removeHeader: true
    realm: owntracks
