apps/production/owntracks/recorder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntracks-recorder
  namespace: owntracks
  labels:
    app: owntracks-recorder
spec:
  type: ClusterIP
  selector:
    app: owntracks-recorder
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
