apps/production/owntracks/recorder-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owntracks-recorder
  namespace: owntracks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: owntracks-owntracks-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - owntracks.nerdsbythehour.com
      secretName: owntracks-tls
  rules:
    - host: owntracks.nerdsbythehour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owntracks-recorder
                port:
                  number: 8083
